// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DangerLightIcon [common] example testing should match snapshot(s) for 1.default 1`] = `
<Icon
  className="lucid-DangerLightIcon"
>
  <circle
    className="lucid-DangerLightIcon-background"
    cx="8"
    cy="8"
    r="7.5"
  />
  <path
    className="lucid-DangerLightIcon-x"
    d="M5.5 5.5l5 5m0-5l-5 5"
  />
</Icon>
`;

exports[`DangerLightIcon [common] example testing should match snapshot(s) for 1.default 2`] = `
<Icon
  className="lucid-DangerLightIcon lucid-DangerLightIcon-is-clickable"
  isClickable={true}
>
  <circle
    className="lucid-DangerLightIcon-background"
    cx="8"
    cy="8"
    r="7.5"
  />
  <path
    className="lucid-DangerLightIcon-x"
    d="M5.5 5.5l5 5m0-5l-5 5"
  />
</Icon>
`;

exports[`DangerLightIcon [common] example testing should match snapshot(s) for 1.default 3`] = `
<Icon
  className="lucid-DangerLightIcon lucid-DangerLightIcon-is-disabled"
  isDisabled={true}
>
  <circle
    className="lucid-DangerLightIcon-background"
    cx="8"
    cy="8"
    r="7.5"
  />
  <path
    className="lucid-DangerLightIcon-x"
    d="M5.5 5.5l5 5m0-5l-5 5"
  />
</Icon>
`;
